--- a/01_Undervisningsnotater/5.-Lister-og-plotting/5.1.1_Lister.ipynb
+++ b/01_Undervisningsnotater/5.-Lister-og-plotting/5.1.1_Lister.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,50 +26,51 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tungvint når vi skal lagre mange verdier"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x_verdier = [1, 5, 7, 9, 81]"
+    "Tungvint når vi skal lagre mange verdier\n",
+    "\n",
+    "Python har en innebygd listetype som heter \"list\". Vi bruker [] for å definere en liste. \n",
+    "\n",
+    "```\n",
+    "    listenavn = [verdi 0, verdi 1, verdi 2, ...]\n",
+    "```"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Slik henter vi verdiene med variabel"
+    "Liste med tallverdier"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "x_2"
+    "x_verdier = [1, 5, 7, 9, 81] "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Hvordan henter vi en verdien 9 fra lista?"
+    "\n",
+    "Plassen til verdiene i en liste kaller vi index. Den første verdien i en liste er alltid på index 0.\n",
+    "\n",
+    "Vi henter ut en verdi fra en liste på denne måten\n",
+    "\n",
+    "\n",
+    "```\n",
+    "    listenavn[index]\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Første verdi fra listen:**"
    ]
   },
   {
@@ -80,7 +81,7 @@
     {
      "data": {
       "text/plain": [
-       "9"
+       "1"
       ]
      },
      "execution_count": 4,
@@ -89,14 +90,14 @@
     }
    ],
    "source": [
-    "x_verdier[3]"
+    "x_verdier[0]"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Siste verdien i liste:"
+    "**Siste verdien i liste:**"
    ]
   },
   {
@@ -116,7 +117,14 @@
     }
    ],
    "source": [
-    "x_verdier[-1]"
+    "x_verdier[len(x_verdier)-1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Og snarveien:**"
    ]
   },
   {
@@ -136,19 +144,37 @@
     }
    ],
    "source": [
-    "x_verdier[len(x_verdier)-1]"
+    "x_verdier[-1]"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Hente intervaller fra listen:"
+    "**Underveisoppgave**\n",
+    "\n",
+    "Hvordan henter vi en verdien 9 fra lista?"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# svar her"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Hente intervaller fra listen: (fra og med indeks 2 til 4, men ikke med indeks 4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +183,7 @@
        "[7, 9]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,13 +196,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Hvordan legge til verdier til en eksisterende liste\n",
-    "- slutten av listen"
+    "## Liste-metoder\n",
+    "\n",
+    "Her de vanligste metodene til lister\n",
+    "\n",
+    "- list.append(elem) -- adds a single element to the end of the list. Common error: does not return the new list, just modifies the original.\n",
+    "- list.insert(index, elem) -- inserts the element at the given index, shifting elements to the right.\n",
+    "- list.extend(list2) adds the elements in list2 to the end of the list. Using + or += on a list is similar to using extend().\n",
+    "- list.index(elem) -- searches for the given element from the start of the list and returns its index. Throws a ValueError if the element does not appear (use \"in\" to check without a ValueError).\n",
+    "- list.remove(elem) -- searches for the first instance of the given element and removes it (throws ValueError if not present)\n",
+    "- list.sort() -- sorts the list in place (does not return it). (The sorted() function shown later is preferred.)\n",
+    "- list.reverse() -- reverses the list in place (does not return it)\n",
+    "- list.pop(index) -- removes and returns the element at the given index. Returns the rightmost element if index is omitted (roughly the opposite of append()).\n",
+    "\n",
+    "**Legge til verdier på slutten av listen til en eksisterende liste**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +223,7 @@
        "[1, 5, 7, 9, 81, 101]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,27 +237,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Hvordan fjerne elementet 9 fra lista:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "9"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "x_verdier.pop(3)"
+    "**Fjerne elementet 9 fra lista:**"
    ]
   },
   {
@@ -239,16 +257,43 @@
     }
    ],
    "source": [
+    "x_verdier.pop(3)\n",
     "x_verdier"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Reversere lista:**"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[101, 81, 7, 5, 1]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "del x_verdier[1]"
+    "x_verdier.reverse()\n",
+    "x_verdier"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Traversere liste med range og len**"
    ]
   },
   {
@@ -257,34 +302,56 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[1, 7, 81, 101]"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "101\n",
+      "81\n",
+      "7\n",
+      "5\n",
+      "1\n"
+     ]
     }
    ],
    "source": [
-    "x_verdier"
+    "for i in range(len(x_verdier)):\n",
+    "    print(x_verdier[i])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Reversere lista:"
+    "**Traversere liste på en litt ryddigere måte**"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "101\n",
+      "81\n",
+      "7\n",
+      "5\n",
+      "1\n"
+     ]
+    }
+   ],
    "source": [
-    "x_verdier.reverse()"
+    "for x_verdi in x_verdier:\n",
+    "    print(x_verdi)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Hva skjer når vi multipliserer, deler og legger sammen python-lister?**"
    ]
   },
   {
@@ -295,7 +362,7 @@
     {
      "data": {
       "text/plain": [
-       "[101, 81, 7, 1]"
+       "[101, 81, 7, 5, 1]"
       ]
      },
      "execution_count": 14,
@@ -308,31 +375,24 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Traversere liste"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "101\n",
-      "81\n",
-      "7\n",
-      "1\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[60, 1, 2]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "for i in range(len(x_verdier)):\n",
-    "    print(x_verdier[i])"
+    "y_verdier = [60, 1, 2]\n",
+    "y_verdier"
    ]
   },
   {
@@ -341,48 +401,18 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "101\n",
-      "81\n",
-      "7\n",
-      "1\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[101, 81, 7, 5, 1, 60, 1, 2]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "for x_verdi in x_verdier:\n",
-    "    print(x_verdi)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "113\n",
-      "83\n",
-      "9\n",
-      "6\n"
-     ]
-    }
-   ],
-   "source": [
-    "y_verdier = [12, 2, 2, 5]\n",
-    "for x, y in zip(x_verdier, y_verdier):\n",
-    "    print(x+y)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Hva skjer når vi multipliserer, deler og legger sammen python-lister?"
+    "x_verdier + y_verdier"
    ]
   },
   {
@@ -390,66 +420,68 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "x_verdier - y_verdier #Det er ikke lov"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[101, 81, 7, 1, 12, 2, 2, 5]"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "x_verdier+y_verdier"
+    "x_verdier*y_verdier #Det er ikke lov"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_verdier/y_verdier #Det er ikke lov"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Liste med tekst:"
+    "**Liste med tekst:**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Bergen'"
+       "'Molde'"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "byer = ['Molde', 'Oslo', 'Bergen']\n",
-    "byer[2]"
+    "byer[0]"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Fylle en liste med tall \n"
+    "## Fylle en liste med tall \n",
+    "\n",
+    "**Alternativ 1**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -458,7 +490,7 @@
        "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -473,8 +505,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Alternativ 2**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +522,7 @@
        "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -494,24 +533,184 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Partall 1**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[2, 4, 6, 8, 10, 12, 14, 16, 18, 20]"
+       "[2, 4, 6, 8, 10]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "min_liste2 = [2*x for x in range(1,11)]\n",
+    "min_liste2 = [x for x in range(2,11,2)]\n",
     "min_liste2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Partall 2**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 4, 6, 8, 10]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "min_liste2 = [2*x for x in range(1,6)]\n",
+    "min_liste2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Lister fra et datasett:**\n",
+    "\n",
+    "Her importerer vi en pakke som heter Pandas for å importere tekstfilen"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "url ='https://uio-profag.github.io/pages/02_dag1/plotting_les_fra_fil/solflekker.txt'\n",
+    "solflekker = pd.read_csv(url, sep='\\t', header=None)\n",
+    "solflekker.columns = ['mnd', 'antall']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Her skriver vi uter de gangene antall solflekker er flere enn 210 på en måned"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "238.9\n",
+      "235.8\n",
+      "253.8\n",
+      "210.9\n",
+      "239.4\n",
+      "217.4\n"
+     ]
+    }
+   ],
+   "source": [
+    "for antall in solflekker.antall:\n",
+    "    if antall > 210:\n",
+    "        print(antall)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Underveisoppgaver"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. Skriv ut alle månedene hvor antall solflekker var 200 eller flere."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. Skriv ut summen av alle solflekker."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3. Skriv ut gjennoomsnitlig antall solflekker per måned."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "4. Hvilken måned var det flest solflekker."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# solflekker.mnd er listen med måneder \n",
+    "# Det du jobber med nå er teknisk sett ikke en liste, men en Pandas dataframe."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "5. Hvilken måned var det færrest solflekker"
    ]
   },
   {
@@ -538,7 +737,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
