--- a/01_Undervisningsnotater/5.-Lister-og-plotting/5.1.2_Numpy_Array.ipynb
+++ b/01_Undervisningsnotater/5.-Lister-og-plotting/5.1.2_Numpy_Array.ipynb
@@ -1,421 +1,408 @@
 {
- "cells": [
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "toc-hr-collapsed": false
-   },
-   "source": [
-    "# Numpy Array\n",
-    "<a href='https://docs.scipy.org/doc/numpy/user/quickstart.html'>Dokumentasjon</a>"
-   ]
+  "metadata": {
+    "kernelspec": {
+      "name": "python36",
+      "display_name": "Python 3.6",
+      "language": "python"
+    },
+    "language_info": {
+      "mimetype": "text/x-python",
+      "nbconvert_exporter": "python",
+      "name": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.6.6",
+      "file_extension": ".py",
+      "codemirror_mode": {
+        "version": 3,
+        "name": "ipython"
+      }
+    },
+    "toc-autonumbering": false,
+    "toc-showmarkdowntxt": true
   },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Hente biblioteket\n",
-    "----"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "toc-hr-collapsed": true
-   },
-   "source": [
-    "### Opprette Array\n",
-    "----"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### - Manuelt\n",
-    "---"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 69,
-   "metadata": {},
-   "outputs": [
+  "nbformat_minor": 2,
+  "nbformat": 4,
+  "cells": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ 1  2  6  9 29]\n"
-     ]
-    }
-   ],
-   "source": [
-    "a = np.array([1,2,6,9,29])\n",
-    "print(a)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 68,
-   "metadata": {},
-   "outputs": [
+      "cell_type": "markdown",
+      "source": "# Numpy Array\n<a href='https://docs.scipy.org/doc/numpy/user/quickstart.html'>Dokumentasjon</a>\n\nEt endimensjonal Numpay-Array har mange av de samme egenskapene som en vektor.  ",
+      "metadata": {
+        "toc-hr-collapsed": false
+      }
+    },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1.         1.41421356 2.44948974 3.         5.38516481]\n"
-     ]
-    }
-   ],
-   "source": [
-    "b = np.sqrt(a)\n",
-    "print(b)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
+      "cell_type": "markdown",
+      "source": "### Importere biblioteket\n----\n\nDet finnes mange måter å importere bibliotek på i Python, men detter den den mest ryddige.\n\nVi har her satt np som alias til numpy",
+      "metadata": {}
+    },
     {
-     "data": {
-      "text/plain": [
-       "dtype('int64')"
+      "cell_type": "code",
+      "source": "import numpy as np",
+      "metadata": {},
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": "### Opprette Array\n----",
+      "metadata": {
+        "toc-hr-collapsed": true
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": "#### - Manuelt\n---",
+      "metadata": {}
+    },
+    {
+      "cell_type": "code",
+      "source": "a = np.array([1,2,6,9,29])\nprint(a)",
+      "metadata": {},
+      "execution_count": 5,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": "[ 1  2  6  9 29]\n"
+        }
       ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a.dtype"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
+    },
     {
-     "data": {
-      "text/plain": [
-       "dtype('float64')"
+      "cell_type": "code",
+      "source": "a.dtype",
+      "metadata": {},
+      "execution_count": 6,
+      "outputs": [
+        {
+          "execution_count": 6,
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": "dtype('int64')"
+          },
+          "metadata": {}
+        }
       ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "b.dtype"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### - np.zeros\n",
-    "___\n",
-    "fyller en array med 0-ere"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 78,
-   "metadata": {},
-   "outputs": [
+    },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n"
-     ]
-    }
-   ],
-   "source": [
-    "z = np.zeros(10)\n",
-    "print(z)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "toc-hr-collapsed": false
-   },
-   "source": [
-    "#### - np.ones\n",
-    "___\n",
-    "\n",
-    "fyller en array med 1-ere"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 71,
-   "metadata": {},
-   "outputs": [
+      "cell_type": "markdown",
+      "source": "#### - np.zeros\n___\nfyller en array med 0-ere",
+      "metadata": {}
+    },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1. 1. 1. 1. 1. 1. 1. 1. 1. 1.]\n"
-     ]
-    }
-   ],
-   "source": [
-    "o = np.ones(10)\n",
-    "print(o)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 72,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[3.14159265 3.14159265 3.14159265 3.14159265 3.14159265 3.14159265\n",
-      " 3.14159265 3.14159265 3.14159265 3.14159265]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(np.ones(10)*np.pi)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### - np.arange\n",
-    "___\n",
-    "\n",
-    "np.arange(fra, til, intervall)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 73,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0 2 4 6 8]\n"
-     ]
-    }
-   ],
-   "source": [
-    "x1 = np.arange(0,10,2)\n",
-    "print(x1)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Slik gjorde vi det med lister**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[0, 2, 4, 6, 8]"
+      "cell_type": "code",
+      "source": "z = np.zeros(10)\nprint(z)",
+      "metadata": {},
+      "execution_count": 7,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": "[0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n"
+        }
       ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "[x for x in range(0,10,2)]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### - np.linspace\n",
-    "___\n",
-    "np.arange(fra, til og med, antall elementer)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 74,
-   "metadata": {},
-   "outputs": [
+    },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0. 2. 4. 6. 8.]\n"
-     ]
-    }
-   ],
-   "source": [
-    "x2 = np.linspace(0,8,5)\n",
-    "print(x2)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Printe\n",
-    "___"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [
+      "cell_type": "markdown",
+      "source": "#### - np.ones\n___\n\nfyller en array med 1-ere",
+      "metadata": {
+        "toc-hr-collapsed": false
+      }
+    },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ 1  2  6  9 29]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(a)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
-   "outputs": [
+      "cell_type": "code",
+      "source": "o = np.ones(10)\nprint(o)",
+      "metadata": {},
+      "execution_count": 8,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": "[1. 1. 1. 1. 1. 1. 1. 1. 1. 1.]\n"
+        }
+      ]
+    },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1.         1.41421356 2.44948974 3.         5.38516481]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(b)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {},
-   "outputs": [
+      "cell_type": "code",
+      "source": "print(np.ones(10)*np.pi)",
+      "metadata": {},
+      "execution_count": 9,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": "[3.14159265 3.14159265 3.14159265 3.14159265 3.14159265 3.14159265\n 3.14159265 3.14159265 3.14159265 3.14159265]\n"
+        }
+      ]
+    },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1.00\n",
-      "1.41\n",
-      "2.45\n",
-      "3.00\n",
-      "5.39\n"
-     ]
-    }
-   ],
-   "source": [
-    "for e in b:\n",
-    "    print(f'{e:.2f}')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "toc-hr-collapsed": true
-   },
-   "source": [
-    "### Funksjoner\n",
-    "___"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 75,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def f(x):\n",
-    "    return x**2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 76,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x = np.array([1,2,6,9,29])\n",
-    "y = f(x)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 77,
-   "metadata": {},
-   "outputs": [
+      "cell_type": "markdown",
+      "source": "#### - np.arange\n___\n\nnp.arange(fra, til, intervall)",
+      "metadata": {}
+    },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[  1   4  36  81 841]\n"
-     ]
+      "cell_type": "code",
+      "source": "x1 = np.arange(0,10,2)\nprint(x1)",
+      "metadata": {},
+      "execution_count": 10,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": "[0 2 4 6 8]\n"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": "**Slik gjorde vi det med lister**",
+      "metadata": {}
+    },
+    {
+      "cell_type": "code",
+      "source": "[x for x in range(0,10,2)]",
+      "metadata": {},
+      "execution_count": 11,
+      "outputs": [
+        {
+          "execution_count": 11,
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": "[0, 2, 4, 6, 8]"
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": "#### - np.linspace\n___\nnp.arange(fra, til og med, antall elementer)",
+      "metadata": {}
+    },
+    {
+      "cell_type": "code",
+      "source": "x2 = np.linspace(0,8,5)\nprint(x2)",
+      "metadata": {},
+      "execution_count": 12,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": "[0. 2. 4. 6. 8.]\n"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": "#### Operasjoner\n---",
+      "metadata": {
+        "toc-hr-collapsed": false
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": "a",
+      "metadata": {},
+      "execution_count": 13,
+      "outputs": [
+        {
+          "execution_count": 13,
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": "array([ 1,  2,  6,  9, 29])"
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": "b = np.sqrt(a)\nb",
+      "metadata": {},
+      "execution_count": 14,
+      "outputs": [
+        {
+          "execution_count": 14,
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": "array([1.        , 1.41421356, 2.44948974, 3.        , 5.38516481])"
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": "**$+$ $-$ $\\cdot$ $/$**",
+      "metadata": {
+        "toc-hr-collapsed": false
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": "print(a + b)",
+      "metadata": {},
+      "execution_count": 15,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": "[ 2.          3.41421356  8.44948974 12.         34.38516481]\n"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": "print(a - b)",
+      "metadata": {},
+      "execution_count": 16,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": "[ 0.          0.58578644  3.55051026  6.         23.61483519]\n"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": "print(a * b)",
+      "metadata": {},
+      "execution_count": 17,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": "[  1.           2.82842712  14.69693846  27.         156.16977941]\n"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": "print(a/b)",
+      "metadata": {},
+      "execution_count": 18,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": "[1.         1.41421356 2.44948974 3.         5.38516481]\n"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": "**Prikkprodukt**",
+      "metadata": {}
+    },
+    {
+      "cell_type": "code",
+      "source": "a.dot(b)",
+      "metadata": {},
+      "execution_count": 20,
+      "outputs": [
+        {
+          "execution_count": 20,
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": "201.69514498834585"
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": "a@b",
+      "metadata": {},
+      "execution_count": 21,
+      "outputs": [
+        {
+          "execution_count": 21,
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": "201.69514498834585"
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": "### Skrive ut\n___",
+      "metadata": {}
+    },
+    {
+      "cell_type": "code",
+      "source": "print(a)",
+      "metadata": {},
+      "execution_count": 22,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": "[ 1  2  6  9 29]\n"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": "print(b)",
+      "metadata": {},
+      "execution_count": 26,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": "[1.         1.41421356 2.44948974 3.         5.38516481]\n"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": "for e in b:\n    print(f'{e:.2f}')",
+      "metadata": {},
+      "execution_count": 24,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": "1.00\n1.41\n2.45\n3.00\n5.39\n"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": "### Funksjoner\n___",
+      "metadata": {
+        "toc-hr-collapsed": true
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": "def f(x):\n    return x**2",
+      "metadata": {},
+      "execution_count": 75,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": "x = np.array([1,2,6,9,29])\ny = f(x)",
+      "metadata": {},
+      "execution_count": 76,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": "print(y)",
+      "metadata": {},
+      "execution_count": 77,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": "[  1   4  36  81 841]\n"
+        }
+      ]
     }
-   ],
-   "source": [
-    "print(y)"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": []
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.2"
-  },
-  "toc-autonumbering": false,
-  "toc-showmarkdowntxt": true
- },
- "nbformat": 4,
- "nbformat_minor": 2
+  ]
 }
